fix: Add overflow x

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,5 @@
 body {
   margin: 0 0 8px 0;
   min-width: 320px;
+  overflow-x: hidden;
 }
